# reflex

./: Cargo.toml  README.md  config.example.json
.github/workflows/: build-reflex.yml  del.yml  gnu.yml  mipsle.yml  release.yml  ruleset.yml  test.yml  windows.yml
geoip/: ad.rrs  ae.rrs  af.rrs  ag.rrs  ai.rrs  al.rrs  am.rrs  ao.rrs  aq.rrs  ar.rrs  as.rrs  at.rrs  au.rrs  aw.rrs  ax.rrs  az.rrs  ba.rrs  bb.rrs  bd.rrs  be.rrs  bf.rrs  bg.rrs  bh.rrs  bi.rrs  bj.rrs  bl.rrs  bm.rrs  bn.rrs  bo.rrs  bq.rrs  br.rrs  bs.rrs  bt.rrs  bv.rrs  bw.rrs  by.rrs  bz.rrs  ca.rrs  cc.rrs  cd.rrs  (+219 more)
geosite/: 0x0.rrs  115.rrs  1337x.rrs  17zuoye.rrs  18comic.rrs  2ch.rrs  2gis.rrs  2kgames.rrs  36kr.rrs  4399.rrs  4chan.rrs  4plebs.rrs  51job.rrs  54647.rrs  58tongcheng.rrs  5ch.rrs  6park.rrs  7tv.rrs  800best.rrs  8btc.rrs  928plus.rrs  9game.rrs  9news.rrs  9to5.rrs  aamgame.rrs  abc.rrs  abema.rrs  accuweather.rrs  acer.rrs  acer@cn.rrs  acfun.rrs  acfun@ads.rrs  acplay.rrs  actalis.rrs  adblock.rrs  adblockplus.rrs  addthis.rrs  addtoany.rrs  adguard.rrs  adidas.rrs  (+1714 more)
src/: lib.rs  main.rs
src/app/: clash_api.rs  dispatcher.rs  mod.rs  outbound_mgr.rs  ruleset_registry.rs  sniff.rs  stats.rs
src/config/: dns.rs  experimental.rs  global.rs  inbound.rs  log.rs  mod.rs  outbound.rs  provider.rs  route.rs
src/dns/: cache.rs  mod.rs  upstream.rs
src/experimental/: cache_file.rs  mod.rs
src/inbound/: dns.rs  mixed.rs  mod.rs  redir.rs  tproxy.rs  tun.rs
src/outbound/: anytls.rs  direct.rs  group.rs  hy2.rs  mod.rs  proto.rs  reality.rs  shadowsocks.rs  socks.rs  tls.rs  trojan.rs  tuic.rs  vless.rs  xhttp.rs
src/outbound/vmess/: aead.rs  frame.rs  mod.rs
src/provider/: health.rs  mod.rs  remote.rs
src/provider/parser/: clash.rs  mod.rs  singbox.rs
src/router/: mod.rs
src/ruleset/: compiler.rs  error.rs  format.rs  loader.rs  matcher.rs  mod.rs  trie.rs
tests/: config_integration.rs  dns_integration.rs  router_integration.rs
